@@ -1,5 +1,5 @@
 import React from 'react';
-/*import styled from 'styled-components/native';
+import styled from 'styled-components/native';
 
 export const Container = styled.SafeAreaView`;
 
@@ -8,6 +8,7 @@ background-color: #368c8c;
     justify-content: center;
     align-items: center;
 `;
+
 export const InputArea = styled.View`;
     widht: 100%;
     padding: 40px;
@@ -25,19 +26,18 @@ export const CustomButtonText = styled.Text`;
     color: #FFF;
 `;
 
-export const SignMessageButton = styled.touchableOpacity`;
+export const SignMessageButton = styled.TouchableOpacity`;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
 `;
 
 export const SignMessageButtonText = styled.Text`;
     font-size: 16px;
     color: #FFF;
 `;
-export const SignMessageButtonBold = styled.Text`;
+
+export const SignMessageButtonTextBold = styled.Text`;
     font-size: 16px;
     color: #FFF;
     font-weight: bold;
-    `;*/
+    `;
